Update openapi scpecification
